# ColorBench

./: README.md  README_zh.md  check_preference_points_from_trajectory.py  construct_graph.py  requirements.txt  run_colorbench.py  run_colorbench.sh  run_colorbench_multi_agent.py  run_multi_owl.sh  run_multi_qwen.sh
HammerEnv/: README.md  Trajectory_processor.py  pyproject.toml
HammerEnv/assets/: user_action_space.json
HammerEnv/examples/: README_BFS.md  andriodworld_task_translator.py  api_config.py  bfs_app_explorer_fixed.py  run_operator_mp.py  run_qwen_operator.py
HammerEnv/notebooks/: plot_trajectory.ipynb
HammerEnv/src/hammer_agent/: agent.py  qwen_agent.py
HammerEnv/src/hammer_world/: __init__.py
HammerEnv/src/hammer_world/env/: actuation.py  adb_utils.py  device_controller.py  device_env.py  env_launcher.py  interface.py  json_action.py
HammerEnv/src/server/: client.py  gradio_web_server_physical_device.py  schema.py  utils.py
HammerEnv/src/server/css/: block.css
HammerEnv/tests/hammer_agent/: test_agent.py  test_qwen_agent.py
HammerEnv/tests/hammer_world/env/: test_adb_utils.py  test_device_env.py  test_interface.py
HammerEnv/tests/server/: test_client.py  test_utils.py
config/: default.yaml  mlas.yaml  osatlas.yaml  qwen3.yaml  uitars.yaml
data/: graph.json  tasks.json
src/: utils.py
src/agent/: agent.py  agent_api.py  agent_atlas.py  agent_base.py  agent_plan_reflection.py  agent_qwen3.py  agent_tars.py  agent_tars_dpo.py  executor_agent.py  memory_agent.py  memory_agent_api.py  plan_reflect_agent.py  planner_agent.py  (+2 more)
(+10 files in other folders)
